[package]
name = "sudo-gcp"
version = "0.1.0"
edition = "2021"

readme = "README.md"
license = "Apache-2.0"
description = "reserved for future development"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
keyring = "2.0.3"
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
