[package]
name = "sudo-gcp"
version = "0.2.1"
edition = "2021"

readme = "README.md"
license = "Apache-2.0"
description = """A gcloud CLI wrapper to use a more secure pattern of 
temporary access tokens and service account impersonation.
"""
repository = "https://github.com/getsentry/sudo-gcp"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
keyring = "2.0.3"
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

